Bug 281577 - Memory Status icon is misleading
Summary: Memory Status icon is misleading
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-systemmonitor (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-07 19:18 UTC by Harold Schreckengost
Modified: 2012-01-02 18:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harold Schreckengost 2011-09-07 19:18:14 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

The icon for the Memory Status widget is misleading; the icon appears to be some sort of flash memory stick, while the widget measures RAM.  Completely different things.

Reproducible: Always

Steps to Reproduce:
It's just there.


Expected Results:  
A stick of RAM would make a good icon.
Comment 1 Shaun Reich 2012-01-02 18:28:47 UTC
Git commit d4b8de7f82f061098e98074f3693e3d2df853315 by Shaun Reich.
Committed on 02/01/2012 at 19:25.
Pushed by sreich into branch 'master'.

Use the more-RAM icon for sm_ram. Use view-stats for sm_temp applets.

The RAM one used a media-flash-sd card thing. Which is less fitting than
media-flash is, yet it was used for temp instead.

M  +1    -1    plasma/generic/applets/system-monitor/plasma-applet-sm_ram.desktop
M  +1    -1    plasma/generic/applets/system-monitor/plasma-applet-sm_temperature.desktop
M  +1    -1    plasma/generic/applets/system-monitor/ram.cpp
M  +1    -1    plasma/generic/applets/system-monitor/temperature.cpp

http://commits.kde.org/kde-workspace/d4b8de7f82f061098e98074f3693e3d2df853315
Comment 2 Shaun Reich 2012-01-02 18:33:00 UTC
Git commit 81c2dadb7933cbeb6d4d2f5ddb839c083c309517 by Shaun Reich.
Committed on 02/01/2012 at 19:25.
Pushed by sreich into branch 'KDE/4.8'.

Use the more-RAM icon for sm_ram. Use view-stats for sm_temp applets.

The RAM one used a media-flash-sd card thing. Which is less fitting than
media-flash is, yet it was used for temp instead.
(cherry picked from commit d4b8de7f82f061098e98074f3693e3d2df853315)

M  +1    -1    plasma/generic/applets/system-monitor/plasma-applet-sm_ram.desktop
M  +1    -1    plasma/generic/applets/system-monitor/plasma-applet-sm_temperature.desktop
M  +1    -1    plasma/generic/applets/system-monitor/ram.cpp
M  +1    -1    plasma/generic/applets/system-monitor/temperature.cpp

http://commits.kde.org/kde-workspace/81c2dadb7933cbeb6d4d2f5ddb839c083c309517