Use the more-RAM icon for sm_ram. Use view-stats for sm_temp applets.

The RAM one used a media-flash-sd card thing. Which is less fitting than
media-flash is, yet it was used for temp instead.

BUG: 281577